kubernetes/godep-tip/deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: godep-tip
  namespace: godep
  labels:
    app: godep-tip
spec:
  replicas: 3
  selector:
    matchLabels:
      app: godep-tip
  template:
    metadata:
      labels:
        app: godep-tip
      annotations:
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8001"
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: godep-tip
        image: metalmatze/godep.org
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
        - name: internal
          containerPort: 8001
        resources:
          requests:
            cpu: 50m
            memory: 25Mi
          limits:
            cpu: 1
            memory: 512Mi
